<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/ConstraintLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">


	<Button
		android:id="@+id/postItem"
...

	<ProgressBar
		android:id="@+id/progress_circle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
		app:layout_constraintEnd_toEndOf="@+id/recycler_view"
		app:layout_constraintStart_toStartOf="@+id/recycler_view"
		app:layout_constraintTop_toTopOf="@+id/recycler_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
...
