<resources>
    <string name="app_name">Donation App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="donor">Donor</string>
    <string name="title_post_list">Posts</string>
    <string name="title_post_detail">Post Detail</string>
    <string name="my_items">My Items</string>
...
    <string name="delivery_method2">Delivery Method:</string>
    <string name="quantity2">Quantity:</string>
    <string name="condition2">Condition:</string>
    <string name="send_email">Send Email</string>
    <string name="send">Send</string>
    <string name="my_open_items">My Open Items</string>
    <string name="go_to_past_postings">Go to Past Postings</string>
    <string name="go_to_current_postings">Go to Current Postings</string>
    <string name="my_past_postings">My Past Postings</string>
    <string name="mark_item_as_donated">Mark Item As Donated</string>
    <string name="enter_recipient_name">Enter Recipient Name</string>
    <string name="recipient_name">Recipient Name</string>
    <string name="enter_name">Enter Name</string>
</resources>
...
